--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^16.0.4",
     "astro": "^2.4.1",
-    "astro-icon": "^0.8.0"
+    "astro-icon": "^0.8.0",
+    "contentful": "^10.1.8"
   }
 }
