--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/react": "^2.1.3",
     "@contentful/rich-text-html-renderer": "^16.0.4",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "@vercel/analytics": "^1.0.1",
     "astro": "^2.4.1",
     "astro-icon": "^0.8.0",
-    "contentful": "^10.1.8"
+    "contentful": "^10.1.8",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
   }
 }
