--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "astro": "^2.4.1",
     "astro-icon": "^0.8.0",
     "contentful": "^10.1.8",
+    "link-preview-js": "^3.0.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   }
